# shmupfetch

./: .gitignore  README.md  justfile  pyproject.toml  shmupfetch.py
src/: __init__.py  cli.py  config.py  db.py  mdk.py  tui.py
